# fastAPI_weatherApp

./: README.md  main.py  pyproject.toml
api/: weather_api.py
app_cache/: weather_cache.py
models/: location.py
services/: weather_report.py
static/css/: style.css
templates/: index.html  layout.html
views/: home.py
