[tool.poetry]
name = "app"
version = "0.0.1"
description = "Weather App"
authors = ["Ashish"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "~0.11.3"
fastapi = "~0.68.0"
python-multipart = "~0.0.5"
pydantic = {extras = ["email"], version = "~1.8.1"}
sqlalchemy = "1.4.41"
psycopg2 = "^2.9.3"
Jinja2 = "^3.1.2"
